--- a/Registro-Usuarios-1/src/main/resources/application.properties
+++ b/Registro-Usuarios-1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:ORCL4
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 
-spring.datasource.username=Proyecto
-spring.datasource.password=Dansanfe2012
+spring.datasource.username=CassaUdec
+spring.datasource.password=Danielfmarin16
 
 spring.jpa.show-sql=true
 
